src/test/resources/semantic/reject/wrongTypeInParens.ul
void main() {
}

int foo() {
    int foo;
    foo = (5.0);
}
